--- a/src/Reown.AppKit.Unity/Resources/Reown/AppKit/Views/SiweView/SiweView.uss
+++ b/src/Reown.AppKit.Unity/Resources/Reown/AppKit/Views/SiweView/SiweView.uss
@@ -4,6 +4,18 @@
     justify-content: center
 }
 
+#siwe-view__logo-app-image {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+}
+
+#siwe-view__logo-wallet-image {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+}
+
 .siwe-view__logo {
     width: 80px;
     height: 80px;
