--- a/src/Reown.AppKit.Unity/Resources/Reown/AppKit/Components/ModalHeader/ModalHeader.uxml
+++ b/src/Reown.AppKit.Unity/Resources/Reown/AppKit/Components/ModalHeader/ModalHeader.uxml
@@ -1,8 +1,8 @@
 <ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" editor-extension-mode="False">
     <Style src="ModalHeader.uss"/>
-    <ui:VisualElement name="modal-header__container">
+    <ui:VisualElement name="modal-header__container" picking-mode="Ignore">
         <ui:VisualElement name="modal-header__left-slot" class="modal-header__slot"/>
-        <ui:VisualElement name="modal-header__body"/>
+        <ui:VisualElement name="modal-header__body" picking-mode="Ignore"/>
         <ui:VisualElement name="modal-header__right-slot" class="modal-header__slot"/>
     </ui:VisualElement>
     <ui:VisualElement name="modal-header__snackbar-container-horizontal"
